# udpeasy

./: .gitignore  pyproject.toml  readme.md
src/examples/: basic_client.py  basic_format.py  basic_server.py
src/udpeasy/: client.py  packet.py  server.py
